--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -171,7 +171,10 @@
     "second": "segundo",
     "minute": "minuto",
     "hour": "hora",
-    "day": "día"
+    "day": "día",
+    "day_1": "día",
+    "day_2_4": "días",
+    "day_5_plus": "días"
   },
   "exchange": {
     "title": "INTERCAMBIO DE OBJETOS",
