--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -171,7 +171,10 @@
     "second": "秒",
     "minute": "分",
     "hour": "時間",
-    "day": "日"
+    "day": "日",
+    "day_1": "日",
+    "day_2_4": "日",
+    "day_5_plus": "日"
   },
   "exchange": {
     "title": "アイテム交換",
