--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -171,7 +171,10 @@
     "second": "초",
     "minute": "분",
     "hour": "시간",
-    "day": "일"
+    "day": "일",
+    "day_1": "일",
+    "day_2_4": "일",
+    "day_5_plus": "일"
   },
   "exchange": {
     "title": "아이템 교환",
