Языки (крестики-нолики)

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -394,6 +394,35 @@
     "game_over": "Spiel beendet",
     "computer_thinking": "Computer denkt...",
     "play_tic_tac_toe": "Tic Tac Toe spielen",
-    "close_game": "Spiel schließen"
+    "close_game": "Spiel schließen",
+    "title": "Tic-Tac-Toe",
+    "move_error": "Fehler beim Zug",
+    "you_won": "🎉 Sie haben gewonnen!",
+    "you_lost": "😞 Sie haben verloren",
+    "draw": "🤝 Unentschieden",
+    "your_turn": "🎮 Ihr Zug",
+    "bot_turn": "🤖 Bot-Zug...",
+    "no_attempts_left": "Sie haben heute keine Versuche mehr!",
+    "come_back_tomorrow": "Kommen Sie morgen für neue Versuche zurück.",
+    "close": "Schließen",
+    "congratulations": "Herzlichen Glückwunsch!",
+    "won_bonus_case": "Sie haben gewonnen und eine Bonuskiste erhalten!",
+    "final_board": "Endgültiges Brett:",
+    "you_played_x_won": "🎮 Sie spielten ✖️ und gewannen!",
+    "creating": "Erstellen...",
+    "play_again": "Nochmal spielen",
+    "claim_prize": "Preis abholen",
+    "attempts_left": "Versuche übrig:",
+    "processing_result": "Ergebnis wird verarbeitet...",
+    "defeat": "Niederlage",
+    "no_luck_this_time": "Diesmal kein Glück, aber geben Sie nicht auf!",
+    "bot_won": "🤖 Bot spielte ⭕ und gewann",
+    "good_game": "Gutes Spiel! Versuchen Sie es nochmal!",
+    "draw_nobody_won": "🤝 Unentschieden - niemand hat gewonnen",
+    "processing_result_status": "⏳ Ergebnis wird verarbeitet...",
+    "attempts_remaining": "Verbleibende Versuche:",
+    "you_play": "Sie spielen:",
+    "goal": "Ziel:",
+    "goal_description": "Sammeln Sie 3 Symbole in einer Reihe (horizontal, vertikal oder diagonal), um zu gewinnen!"
   }
 }
