--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -790,6 +790,35 @@
     "game_over": "Game Over",
     "computer_thinking": "Computer thinking...",
     "play_tic_tac_toe": "Play Tic Tac Toe",
-    "close_game": "Close Game"
+    "close_game": "Close Game",
+    "title": "Tic-Tac-Toe",
+    "move_error": "Error making move",
+    "you_won": "🎉 You won!",
+    "you_lost": "😞 You lost",
+    "draw": "🤝 Draw",
+    "your_turn": "🎮 Your turn",
+    "bot_turn": "🤖 Bot's turn...",
+    "no_attempts_left": "You've run out of attempts for today!",
+    "come_back_tomorrow": "Come back tomorrow for new attempts.",
+    "close": "Close",
+    "congratulations": "Congratulations!",
+    "won_bonus_case": "You won and received a bonus case!",
+    "final_board": "Final board:",
+    "you_played_x_won": "🎮 You played ✖️ and won!",
+    "creating": "Creating...",
+    "play_again": "Play Again",
+    "claim_prize": "Claim Prize",
+    "attempts_left": "Attempts left:",
+    "processing_result": "Processing result...",
+    "defeat": "Defeat",
+    "no_luck_this_time": "No luck this time, but don't give up!",
+    "bot_won": "🤖 Bot played ⭕ and won",
+    "good_game": "Good game! Try to play again!",
+    "draw_nobody_won": "🤝 Draw - nobody won",
+    "processing_result_status": "⏳ Processing result...",
+    "attempts_remaining": "Attempts remaining:",
+    "you_play": "You play:",
+    "goal": "Goal:",
+    "goal_description": "Get 3 symbols in a row (horizontally, vertically or diagonally) to win!"
   }
 }
