--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -390,6 +390,35 @@
     "game_over": "Juego Terminado",
     "computer_thinking": "La computadora piensa...",
     "play_tic_tac_toe": "Jugar Tres en Línea",
-    "close_game": "Cerrar Juego"
+    "close_game": "Cerrar Juego",
+    "title": "Tres en Raya",
+    "move_error": "Error al hacer movimiento",
+    "you_won": "🎉 ¡Has ganado!",
+    "you_lost": "😞 Has perdido",
+    "draw": "🤝 Empate",
+    "your_turn": "🎮 Tu turno",
+    "bot_turn": "🤖 Turno del bot...",
+    "no_attempts_left": "¡Se te acabaron los intentos por hoy!",
+    "come_back_tomorrow": "Vuelve mañana por nuevos intentos.",
+    "close": "Cerrar",
+    "congratulations": "¡Felicidades!",
+    "won_bonus_case": "¡Has ganado y recibido una caja de bonificación!",
+    "final_board": "Tablero final:",
+    "you_played_x_won": "🎮 ¡Jugaste ✖️ y ganaste!",
+    "creating": "Creando...",
+    "play_again": "Jugar de Nuevo",
+    "claim_prize": "Reclamar Premio",
+    "attempts_left": "Intentos restantes:",
+    "processing_result": "Procesando resultado...",
+    "defeat": "Derrota",
+    "no_luck_this_time": "Sin suerte esta vez, ¡pero no te rindas!",
+    "bot_won": "🤖 El bot jugó ⭕ y ganó",
+    "good_game": "¡Buen juego! ¡Intenta jugar de nuevo!",
+    "draw_nobody_won": "🤝 Empate - nadie ganó",
+    "processing_result_status": "⏳ Procesando resultado...",
+    "attempts_remaining": "Intentos restantes:",
+    "you_play": "Juegas:",
+    "goal": "Objetivo:",
+    "goal_description": "¡Consigue 3 símbolos en fila (horizontal, vertical o diagonalmente) para ganar!"
   }
 }
