--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -390,6 +390,35 @@
     "game_over": "Jeu Terminé",
     "computer_thinking": "L'ordinateur réfléchit...",
     "play_tic_tac_toe": "Jouer au Morpion",
-    "close_game": "Fermer le Jeu"
+    "close_game": "Fermer le Jeu",
+    "title": "Morpion",
+    "move_error": "Erreur lors du mouvement",
+    "you_won": "🎉 Vous avez gagné !",
+    "you_lost": "😞 Vous avez perdu",
+    "draw": "🤝 Match nul",
+    "your_turn": "🎮 Votre tour",
+    "bot_turn": "🤖 Tour du bot...",
+    "no_attempts_left": "Vous n'avez plus de tentatives aujourd'hui !",
+    "come_back_tomorrow": "Revenez demain pour de nouvelles tentatives.",
+    "close": "Fermer",
+    "congratulations": "Félicitations !",
+    "won_bonus_case": "Vous avez gagné et reçu une caisse bonus !",
+    "final_board": "Plateau final :",
+    "you_played_x_won": "🎮 Vous avez joué ✖️ et gagné !",
+    "creating": "Création...",
+    "play_again": "Rejouer",
+    "claim_prize": "Réclamer le Prix",
+    "attempts_left": "Tentatives restantes :",
+    "processing_result": "Traitement du résultat...",
+    "defeat": "Défaite",
+    "no_luck_this_time": "Pas de chance cette fois, mais n'abandonnez pas !",
+    "bot_won": "🤖 Le bot a joué ⭕ et a gagné",
+    "good_game": "Bon jeu ! Essayez de rejouer !",
+    "draw_nobody_won": "🤝 Match nul - personne n'a gagné",
+    "processing_result_status": "⏳ Traitement du résultat...",
+    "attempts_remaining": "Tentatives restantes :",
+    "you_play": "Vous jouez :",
+    "goal": "Objectif :",
+    "goal_description": "Alignez 3 symboles (horizontalement, verticalement ou en diagonale) pour gagner !"
   }
 }
