--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -390,6 +390,35 @@
     "game_over": "ゲーム終了",
     "computer_thinking": "コンピューターが考えています...",
     "play_tic_tac_toe": "三目並べをプレイ",
-    "close_game": "ゲームを閉じる"
+    "close_game": "ゲームを閉じる",
+    "title": "三目並べ",
+    "move_error": "手を指すエラー",
+    "you_won": "🎉 あなたの勝ちです！",
+    "you_lost": "😞 あなたの負けです",
+    "draw": "🤝 引き分け",
+    "your_turn": "🎮 あなたの番",
+    "bot_turn": "🤖 ボットの番...",
+    "no_attempts_left": "今日の試行回数が終了しました！",
+    "come_back_tomorrow": "明日新しい試行のために戻ってきてください。",
+    "close": "閉じる",
+    "congratulations": "おめでとうございます！",
+    "won_bonus_case": "勝利してボーナスケースを獲得しました！",
+    "final_board": "最終盤面：",
+    "you_played_x_won": "🎮 あなたは✖️で勝利しました！",
+    "creating": "作成中...",
+    "play_again": "もう一度プレイ",
+    "claim_prize": "賞品を獲得",
+    "attempts_left": "残り試行回数：",
+    "processing_result": "結果を処理中...",
+    "defeat": "敗北",
+    "no_luck_this_time": "今回は運がありませんでしたが、諦めないでください！",
+    "bot_won": "🤖 ボットが⭕で勝利しました",
+    "good_game": "良いゲームでした！もう一度プレイしてみてください！",
+    "draw_nobody_won": "🤝 引き分け - 誰も勝ちませんでした",
+    "processing_result_status": "⏳ 結果を処理中...",
+    "attempts_remaining": "残り試行回数：",
+    "you_play": "あなたのプレイ：",
+    "goal": "目標：",
+    "goal_description": "3つのシンボルを一列に並べて（横、縦、斜め）勝利しよう！"
   }
 }
