--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -390,6 +390,35 @@
     "game_over": "게임 종료",
     "computer_thinking": "컴퓨터가 생각 중...",
     "play_tic_tac_toe": "틱택토 플레이",
-    "close_game": "게임 닫기"
+    "close_game": "게임 닫기",
+    "title": "틱택토",
+    "move_error": "이동 중 오류",
+    "you_won": "🎉 승리했습니다!",
+    "you_lost": "😞 패배했습니다",
+    "draw": "🤝 무승부",
+    "your_turn": "🎮 당신의 차례",
+    "bot_turn": "🤖 봇의 차례...",
+    "no_attempts_left": "오늘 시도 횟수가 다 떨어졌습니다!",
+    "come_back_tomorrow": "내일 새로운 시도를 위해 다시 오세요.",
+    "close": "닫기",
+    "congratulations": "축하합니다!",
+    "won_bonus_case": "승리하여 보너스 케이스를 받았습니다!",
+    "final_board": "최종 보드:",
+    "you_played_x_won": "🎮 당신이 ✖️로 승리했습니다!",
+    "creating": "생성 중...",
+    "play_again": "다시 플레이",
+    "claim_prize": "상품 받기",
+    "attempts_left": "남은 시도 횟수:",
+    "processing_result": "결과 처리 중...",
+    "defeat": "패배",
+    "no_luck_this_time": "이번엔 운이 없었지만 포기하지 마세요!",
+    "bot_won": "🤖 봇이 ⭕로 승리했습니다",
+    "good_game": "좋은 게임이었습니다! 다시 플레이해보세요!",
+    "draw_nobody_won": "🤝 무승부 - 아무도 이기지 못했습니다",
+    "processing_result_status": "⏳ 결과 처리 중...",
+    "attempts_remaining": "남은 시도 횟수:",
+    "you_play": "당신이 플레이:",
+    "goal": "목표:",
+    "goal_description": "3개의 기호를 한 줄로 만들어 (수평, 수직, 대각선) 승리하세요!"
   }
 }
