--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -771,6 +771,35 @@
     "game_over": "Игра окончена",
     "computer_thinking": "Компьютер думает...",
     "play_tic_tac_toe": "Играть в крестики-нолики",
-    "close_game": "Закрыть игру"
+    "close_game": "Закрыть игру",
+    "title": "Крестики-нолики",
+    "move_error": "Ошибка при совершении хода",
+    "you_won": "🎉 Вы выиграли!",
+    "you_lost": "😞 Вы проиграли",
+    "draw": "🤝 Ничья",
+    "your_turn": "🎮 Ваш ход",
+    "bot_turn": "🤖 Ход бота...",
+    "no_attempts_left": "У вас закончились попытки на сегодня!",
+    "come_back_tomorrow": "Приходите завтра за новыми попытками.",
+    "close": "Закрыть",
+    "congratulations": "Поздравляем!",
+    "won_bonus_case": "Вы выиграли и получили бонусный кейс!",
+    "final_board": "Финальная доска:",
+    "you_played_x_won": "🎮 Вы играли ✖️ и выиграли!",
+    "creating": "Создание...",
+    "play_again": "Играть еще",
+    "claim_prize": "Забрать приз",
+    "attempts_left": "Осталось попыток:",
+    "processing_result": "Обрабатываем результат...",
+    "defeat": "Поражение",
+    "no_luck_this_time": "В этот раз не повезло, но не сдавайтесь!",
+    "bot_won": "🤖 Бот играл ⭕ и выиграл",
+    "good_game": "Хорошая игра! Попробуйте переиграть!",
+    "draw_nobody_won": "🤝 Ничья - никто не выиграл",
+    "processing_result_status": "⏳ Обрабатываем результат...",
+    "attempts_remaining": "Попыток осталось:",
+    "you_play": "Вы играете:",
+    "goal": "Цель:",
+    "goal_description": "Соберите 3 символа в ряд (по горизонтали, вертикали или диагонали), чтобы выиграть!"
   }
 }
