--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -390,6 +390,35 @@
     "game_over": "游戏结束",
     "computer_thinking": "电脑思考中...",
     "play_tic_tac_toe": "玩井字棋",
-    "close_game": "关闭游戏"
+    "close_game": "关闭游戏",
+    "title": "井字游戏",
+    "move_error": "移动时出错",
+    "you_won": "🎉 你赢了！",
+    "you_lost": "😞 你输了",
+    "draw": "🤝 平局",
+    "your_turn": "🎮 轮到你了",
+    "bot_turn": "🤖 机器人回合...",
+    "no_attempts_left": "你今天的尝试次数已用完！",
+    "come_back_tomorrow": "明天再来获取新的尝试次数。",
+    "close": "关闭",
+    "congratulations": "恭喜！",
+    "won_bonus_case": "你赢了并获得了奖励箱！",
+    "final_board": "最终棋盘：",
+    "you_played_x_won": "🎮 你使用✖️获胜了！",
+    "creating": "创建中...",
+    "play_again": "再玩一次",
+    "claim_prize": "领取奖品",
+    "attempts_left": "剩余尝试次数：",
+    "processing_result": "处理结果中...",
+    "defeat": "失败",
+    "no_luck_this_time": "这次运气不好，但不要放弃！",
+    "bot_won": "🤖 机器人使用⭕获胜了",
+    "good_game": "好游戏！再试一次！",
+    "draw_nobody_won": "🤝 平局 - 没有人获胜",
+    "processing_result_status": "⏳ 处理结果中...",
+    "attempts_remaining": "剩余尝试次数：",
+    "you_play": "你玩：",
+    "goal": "目标：",
+    "goal_description": "连成三个相同符号（横、竖或斜线）即可获胜！"
   }
 }
